Please enter the commit message for your changes. Lines starting  with '#' will be ignored, and an empty message aborts the commit.
 On branch main
 Your branch is up to date with 'origin/main'.

 Changes to be committed:
	modified:   JS_Challenge_day5/oz-countdown-timer/.DS_Store
	modified:   JS_Challenge_day5/oz-countdown-timer/countdown-timer.html
	modified:   JS_Challenge_day5/oz-countdown-timer/countdown.css
	modified:   JS_Challenge_day5/oz-countdown-timer/countdown.js

--- a/JS_Challenge_day5/oz-countdown-timer/countdown-timer.html
+++ b/JS_Challenge_day5/oz-countdown-timer/countdown-timer.html
@@ -22,12 +22,12 @@
         </div>
         <h1>남은 시간</h1>
         <div id="timerbox">
-            <div class="time" id="year"></div>
-            <div class="time" id="month"></div>
-            <div class="time" id="day"></div>
-            <div class="time" id="hour"></div>
-            <div class="time" id="minute"></div>
-            <div class="time" id="second"></div>
+            <span class="time" id="y"></span><span>년</span>
+            <span class="time" id="m"></span><span>월</span>
+            <span class="time" id="d"></span><span>일</span>
+            <span class="time" id="h"></span><span>시</span>
+            <span class="time" id="min"></span><span>분</span>
+            <span class="time" id="sec"></span><span>초</span>
         </div>
         <button id="reset">RESET</button>
     </div>
